import Spinner from '../spinner';

takeSnapshots(
  {
    default: {},
    asBar: {
      bar: true
    }
  },
  Spinner
);
